--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -5,7 +5,7 @@
 
 html, body{
     margin: 0;
-    font-family: "AvenirNextLTPro-Regular";
+    font-family: "AvenirNext";
 }
 
 // Start of Header SCSS
@@ -23,6 +23,7 @@ background-position: center;
 }
 
     &__album{
+        font-weight: 400;
         padding-top: 1rem;
         margin: 0 0 0 1rem;
         line-height: $mobile-headerHeight;
@@ -39,6 +40,7 @@ background-position: center;
     }
 
     &__title{
+        font-weight: 600;
         margin-left: 1rem;
         font-size: $mobile-headerSize;
         width: 12.5rem;
@@ -77,6 +79,7 @@ background-position: center;
 .table{
     color: $primary-color;
     padding-bottom: 1rem;
+    font-weight: 400;
 
     @include tablet{
         padding-bottom: 2rem;
@@ -89,7 +92,7 @@ background-position: center;
     }
 
     &__title{
-        font-family: "AvenirNextLTPro-demi";
+        font-weight: 600;
         padding: $mobile-headlinePadding;
         font-size: $mobile-headerSize;
         margin: $mobile-sidePadding;
@@ -192,14 +195,14 @@ background-position: center;
     &__text{
         margin: 0.5rem 1rem 1rem 1rem;
         width: 12.5rem;
-       
+
         @include tablet{
             margin: 0
         }
     }
 
-    &__text:nth-child(2){
-        font-family: "AvenirNextLTPro-Demi";
+    &__date{
+        font-weight: 600;
     }
 
     &__submit{
@@ -214,6 +217,7 @@ background-position: center;
         border-radius: 4px;
         border-style: none;
         padding: 0;
+        
        
         @include tablet{
             width: 9.38rem;
